--- a/survey-webapp/src/main/resources/messages.properties
+++ b/survey-webapp/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 # regular resources
-
+project.name=\u654F\u6377\u95EE\u5377\u5728\u7EBF
 jsp.general.title=${project.parent.name}
 
 # Page titles
@@ -11,9 +11,16 @@ page.login.title=${project.parent.name} : Login
 page.admin.title=${project.parent.name} : Admin
 
 # navigation bar items
-navbar.home.title=Home
-navbar.about.title=About
+navbar.home.title=\u9996\u9875
+navbar.about.title=\u6211\u7684\u95EE\u5377
 navbar.contact.title=Contact
 navbar.logout.title=Logout
+#chuang_jian_wen_juan
+toolbar.addnew.title=\u521B\u5EFA\u95EE\u5377
+toolbar.edit.title=\u7F16\u8F91\u95EE\u5377
+toolbar.delete.title=\u5220\u9664\u95EE\u5377
+toolbar.view.title=\u67E5\u770B
 
 error.general.title=${project.parent.name} : Error
+
+
